fixed spacing

--- a/style/style.css
+++ b/style/style.css
@@ -304,7 +304,7 @@ right:0;
 .my-services h3{
   color: var(--clr-blue);
   font-family: var(--ff_secondary);
-  margin-top: 20px;
+  margin-top: 40px;
 }
 .my-services-img{
     margin-top: 50px;
